  systems that have multiple delphinusdnsd running
- change every instance of "master" to "primary"
- add a 10-query query cache which speeds up subsequent answers
- ZONEMD RR's can now be added to a zone in both DNSSEC and non-DNSSEC zones.
  They can also be integrity checked with dddctl zonemd.
- RFC 9018/7873 Server DNS Cookies support, at first for OpenBSD only


Changes in RELEASE_1_5 from RELEASE_1_4

- implement a double-signature rollover method
- allow ZSK and KSK keys to be created without signing
- switch default algorithm to alg 13 (elliptic curve) instead of alg 8 (RSA)
- not specifying a tsigkey in rzone should now imply NOKEY
- multiple RRSIG's are now working without bugs
- fixed the random time restart algorithm to restart at only 1 desired time
  which increases the odds that replicants won't do it at the same time.
- ANY replies have the option now to be forced to TCP only with the
  tcp-on-any-only option.
- conform to RFC 2181 section 5.2, but keep exception for RRSIG per RFC 4034
- added a "cortex" process for IPC between the processes
- added a forwarding mode (with cache)
- changed the config file version from 9 back to 1
- changed how a question gets parsed (build_question()), hopeing to get
  more security out of this
- in dddctl query allow a class to be specified (-c)
- added RP, HINFO and CAA RR support in all areas except dddctl query
- add a SOA constraint on rzone's to constrain SOA refresh/retry/expire values
  by default these are 60/60/60
- terminology changes blacklist->blocklist, whitelist->passlist, 
  anything_slave() to anything_ddd(), to keep with the times
- made the 3G database truly RW (before there was some memcpy'ing going on 
that corrupted pointers making the databse RO).
- added extra security measure to prevent DNS poisoning by AXFR
- added a bytelimit to how much one can AXFR from a remote site.  Unfortunately
  this won't prevent a disk to fill up in most circumstances, but may give