@@ -214,6 +214,7 @@ int dnssec = 0;
 int raxfrflag = 0;
 int tcpanyonly = 0;
 int replicant_axfr_old_behaviour = 0;
+int primary_axfr_old_behaviour = 0;
 u_int max_udp_payload = 0xffff; /* 65535 */
 uint16_t fudge_forward = DEFAULT_TSIG_FUDGE;
 uint8_t rdomain = 0;
@@ -1350,6 +1351,9 @@ optionsstatement:
 			} else if (strcasecmp($1, "replicant-axfr-old-behaviour") == 0) {
 				dolog(LOG_DEBUG, "using old AXFR behaviour (broken)\n");
 				replicant_axfr_old_behaviour = 1;
+			} else if (strcasecmp($1, "primary-axfr-old-behaviour") == 0) {
+				dolog(LOG_DEBUG, "using old primary AXFR behaviour (no questions in axfr)\n");
+				primary_axfr_old_behaviour = 1;
 			}
 		}
 	}
